# linus-ai-public

./: .gitignore  ENTERPRISE-SOURCE-LICENSE.md  LICENSE-COMMERCIAL.md  LICENSE.md  README.md  SOURCE-VIEWER-LICENSE.md  THIRD-PARTY-LICENSES.md  build-gui.sh  build.sh  linus-ai.code-workspace  release.sh  run.sh  test.sh
.github/workflows/: publish.yml
connectx/: README.md
day/: README.md
docs/oss-launch/: CLA.md  CONTRIBUTING.md  LAUNCH-POSTS.md  LICENSE-AGPL-NOTICE.md  README-NEW.md  USPTO-TRADEMARK-DRAFT.md
forge/: README.md
gui/: README.md  app.js  build.sh  index.html  product.config.json  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
linus-ai/: BUILD.md  OPERATIONS_MANUAL.md  README.md  SPEC.md  THIRD-PARTY-LICENSES.md
linus-ai-med/: HIPAA.md  README.md
linus-aimed-ext/: README.md
linus-bizcore/: README.md
linus-bizcore-ext/: README.md
p2pnet/: README.md
pulse/: README.md
reserve/: README.md
trips/: README.md
